--- a/2022-09-21_atividade_login/index.html
+++ b/2022-09-21_atividade_login/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Login</h1>
-    <form action="pagina1.php" method="post">
-        <p>Usuário: <input type="text" name="user"></p>
-        <p>Senha: <input type="text" name="senha"></p>
-        <p><input type="submit" value="Entrar"></p>
-    </form>
+    <div>
+        <h1>Login</h1>
+        <form action="pagina1.php" method="post">
+            <p>Usuário: <input type="text" name="user"></p>
+            <p>Senha: <input type="text" name="senha"></p>
+            <p><input type="submit" value="Entrar"></p>
+        </form>
+    </div>
 </body>
 </html>
