Um section para os campos a serem preenchidos Usuário e senha são ambos 'etec' Mudanças no css do section Classe .conteudo e .autor removidas Classe .direita criada

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
+    <section>
         <h1>Login</h1>
         <form action="pagina1.php" method="post">
             <p>Usuário: <input type="text" name="user"></p>
-            <p>Senha: <input type="text" name="senha"></p>
+            <p>Senha: <input type="password" name="senha" ></p>
             <p><input type="submit" value="Entrar"></p>
         </form>
-    </div>
+    </section>
 </body>
 </html>
