validacao com sessions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section>
         <h1>Login</h1>
-        <form action="pagina1.php" method="post">
+        <form action="inserir-dados.php" method="post">
             <p>Usuário: <input type="text" name="user"></p>
             <p>Senha: <input type="password" name="senha" ></p>
             <p><input type="submit" value="Entrar"></p>
